Fix dark mode diagram issues

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -2,20 +2,16 @@
 svg.graphviz {
     max-width: 100% !important;
     height: auto !important;
+
+    --graphviz-font-color: var(--color-content-foreground);
 }
 
 svg.graphviz .node a {
     text-decoration: none;
-    fill: var(--color-link);
-}
-
-svg.graphviz .node a:hover {
-    fill: var(--pst-color-link-hover);
-    text-decoration: underline;
+    --graphviz-font-color: var(--color-link);
 }
 
 /* Make Rubric more like sphinx-book-theme */
-
 p.rubric {
     font-size: 1em;
     border-bottom: 1px solid var(--color-background-border);
@@ -27,7 +23,7 @@ p.rubric {
 .code-card .sd-card-body {
     padding: 0;
     border-radius: 0 0 0.25rem 0.25rem;
-    background-color: #f0f0f0 !important;
+    /*background-color: var(--sd-color-card-background) !important;*/
 }
 
 .code-card .sd-card-body>div {
